@@ -28,6 +28,11 @@ Changes to squid-2.5
 	  as the dist-all and distcheck targets for developers which respectively
 	  build a tar.gz and a tar.bz2 distribution, and check that what will be
 	  distributed builds.
+	- Added TOS and source address selection based on ACLs,
+	  written by Roger Venning. This allows administrators to set
+	  the TOS precedence bits and/or the source IP from a set of
+	  available IPs based upon some ACLs, generally to map different
+	  users to different outgoing links and traffic profiles.
 	
 Changes to Squid-2.4.DEVEL4 ():
 
